objects/Programs__c.object
<CustomObject>
    <description>Program/Distributor</description>
    <fields>
        <fullName>Account_Exec_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Exec 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Exec_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Exec 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Checklist_Count__c</fullName>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap.
https://na8.salesforce.com/01QC0000000IxIW</description>
        <formula>if( Bundle_Clearance_by_Length__c =True, 0,1)+if( Bundle_Missing_Orders__c =True,0,1)+if( Bundle_Missing_Stations__c =True, 0,1)+if( Bundle_Spots_without_Stations__c =True, 0,1)+if( Bundle_Over_Clearing_Station_Orders__c =True, 0,1)+if( Bundle_Low_Clearance_Levels__c =True, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that calculates whether all bundle upload checks have been completed.</inlineHelpText>
        <label>Bundle Checklist Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Clearance_by_Length__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap.
https://na8.salesforce.com/01QC0000000IxIW</description>
        <inlineHelpText>Checks for any large discrepancies between clearances for different lengths.
Checklist for Bundles. Clears all checkboxes after a new version is uploaded.</inlineHelpText>
        <label>[Dep]Bundle Clearance by Length</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Low_Clearance_Levels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap. 
https://na8.salesforce.com/01QC0000000IxIW</description>
        <inlineHelpText>Reminder to check for overall low clearance or declines in bundle clearance
Used by Operations to check for errors in bundle uploads and correct asap.</inlineHelpText>
        <label>[Dep]Bundle Low Clearance Levels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Missing_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap.
https://na8.salesforce.com/01QC0000000IxIW</description>
        <inlineHelpText>Reminder to check for missing orders (orders with 0% clearance by station or overall)
Checklist for Bundles. Clears all checkboxes after a new version is uploaded.</inlineHelpText>
        <label>[Dep]Bundle Missing Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Missing_Stations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap.
https://na8.salesforce.com/01QC0000000IxIW</description>
        <inlineHelpText>Reminder to check for stations with 0% clearance that may no longer participate in the bundle
Checklist for Bundles. Clears all checkboxes after a new version is uploaded.</inlineHelpText>
        <label>[Dep]Bundle Missing Stations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <label>Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Over_Clearing_Station_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap. 
https://na8.salesforce.com/01QC0000000IxIW</description>
        <inlineHelpText>Reminder to check for Stations that may have overrun orders
Used by Operations to check for errors in bundle uploads and correct asap.</inlineHelpText>
        <label>[DeBundle Over Clearing Station / Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Rate__c</fullName>
        <inlineHelpText>Rollup of Active Bundle Daypart Pricing Records</inlineHelpText>
        <label>Bundle Rate</label>
        <summarizedField>Bundle_Pricing__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Bundle_Pricing__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bundle_Pricing__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bundle_Spots_without_Stations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Bundles. Clears all checkboxes after a new version is uploaded. 
Used by Operations to check for errors in bundle uploads and correct asap. 
https://na8.salesforce.com/01QC0000000IxIW</description>
        <inlineHelpText>Reminder to check to see if any spots were uploaded that did not match to stations
Used by Operations to check for errors in bundle uploads and correct asap.</inlineHelpText>
        <label>[Dep]Bundle Spots without Stations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Tier_1_Rate__c</fullName>
        <label>[Dep]Bundle Tier 1 Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundle_Tier_1__c</fullName>
        <label>Bundle Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Tier_2_Rate__c</fullName>
        <label>[Dep]Bundle Tier 2 Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundle_Tier_2__c</fullName>
        <label>Bundle Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Tier_3__c</fullName>
        <label>[Dep]Bundle Tier 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable_Synd__c</fullName>
        <label>Cable/Synd/PP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Syndication</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capping_Revisions__c</fullName>
        <label>Capping Revisions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Planner In Progress</fullName>
                </value>
                <value>
                    <fullName>SF In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCode__c</fullName>
        <description>Assigned by Finance</description>
        <inlineHelpText>Assigned by Finance</inlineHelpText>
        <label>ClientCode</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MGM</fullName>
                </value>
                <value>
                    <fullName>NFL</fullName>
                </value>
                <value>
                    <fullName>TVS</fullName>
                </value>
                <value>
                    <fullName>WB</fullName>
                </value>
                <value>
                    <fullName>Somedia</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Gameday</fullName>
                </value>
                <value>
                    <fullName>Cookie Jar</fullName>
                </value>
                <value>
                    <fullName>Amer Latino</fullName>
                </value>
                <value>
                    <fullName>Documentary</fullName>
                </value>
                <value>
                    <fullName>LAMC</fullName>
                </value>
                <value>
                    <fullName>Mustard</fullName>
                </value>
                <value>
                    <fullName>Tribune</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>Broadway Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clock_Start_Time__c</fullName>
        <label>Clock Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5AM</fullName>
                </value>
                <value>
                    <fullName>6AM</fullName>
                </value>
                <value>
                    <fullName>4AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Set__c</fullName>
        <label>[Dep]Competitive Set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Men</fullName>
                </value>
                <value>
                    <fullName>Classic TV</fullName>
                </value>
                <value>
                    <fullName>Women</fullName>
                </value>
                <value>
                    <fullName>Game Show</fullName>
                </value>
                <value>
                    <fullName>Upscale</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Competitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Log_Template__c</fullName>
        <formula>if( Template__c = 0, &quot;a0B80000005ACRB&quot;, 

if( Template__c  =1, &quot;a0B80000005AbZ8&quot;,

if( Template__c  =2, &quot;a0B80000005AbZ9&quot;, 

if( Template__c  =3, &quot;a0BC000000CBRxt&quot;, 

if( Template__c  =4, &quot;a0BC000000CBRyW&quot;, 

if( Template__c  =5, &quot;a0BC000000CBRyb&quot;, 

if( Template__c  =6, &quot;a0BC000000Qsbd8&quot;,

if( Template__c  =7, &quot;a0BC000000Jct8K&quot;,

if( Template__c  =8, &quot;a0BC000000JcOlr&quot;,

if( Template__c  =9, &quot;a0BC000000JcFmm&quot;,

if( Template__c  =10, &quot;a0BC000000HJRhN&quot;,

if(Template__c  =11, &quot;a0BC000000dCVd0&quot;,

if(Template__c  =12, &quot;a0BC000000dCVdF&quot;,

if(Template__c  =13, &quot;a0BC000000dCVdP&quot;,

if(Template__c  =14, &quot;a0BC000000dz6Wz&quot;,

if(Template__c = 15, &quot;a0BC000000dzSY2&quot;,

if(Template__c = 16, &quot;a0BC000000dzSj5&quot;,

if(Template__c = 17, &quot;a0BC000000eKiGv&quot;,

if(Template__c = 18, &quot;a0BC000000eKqcJ&quot;,

if(Template__c = 19, &quot;a0BC000000egHk1&quot;,

&quot;ERROR&quot;
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Log Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Da_Filler__c</fullName>
        <label>DA Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Entity__c</fullName>
        <description>The field will be used to update all of the existing deals with the correct entity name</description>
        <label>Deal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marathon Ventures LLC</fullName>
                    <default>true</default>
                    <label>Marathon Ventures LLC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Filler__c</fullName>
        <label>EF Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filler_EM__c</fullName>
        <label>Filler EM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if inventory is fixed at a certain amount each week.  9/6/2011</description>
        <inlineHelpText>Check if inventory is fixed at a certain amount each week.</inlineHelpText>
        <label>[Dep]Fixed Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_DA__c</fullName>
        <label>DA Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_EM__c</fullName>
        <label>EM Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_LN__c</fullName>
        <label>LN Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_ON__c</fullName>
        <label>ON Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_PR__c</fullName>
        <label>PR Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday_Order_Deadline__c</fullName>
        <label>Friday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select for properties that are no longer handled by Marathon; affects some budgeting and forecast reports.</description>
        <inlineHelpText>Select for properties that are no longer handled by Marathon; affects some budgeting and forecast reports.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intg_Day__c</fullName>
        <inlineHelpText>Integration Day: Mon - 0, Tues - 1, Wed - 2, Th - 3, Fri - 4</inlineHelpText>
        <label>Intg Day</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LF_Filler__c</fullName>
        <label>LF Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LN_Filler__c</fullName>
        <label>LN Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Week__c</fullName>
        <label>Launch Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Minutes_Per_Hour__c</fullName>
        <label>Local Minutes Per Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log_Week__c</fullName>
        <inlineHelpText>Log Week:
0 - Current
1 - Next Week
2 - Two Weeks Later</inlineHelpText>
        <label>Log Week</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logs_CC__c</fullName>
        <inlineHelpText>Enter any required CC: fields for the logs separated by commas.</inlineHelpText>
        <label>Logs CC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logs_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary contact for integration instructions at client/network</inlineHelpText>
        <label>Logs Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monday_Order_Deadline__c</fullName>
        <label>Monday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Minutes_Per_Hour__c</fullName>
        <label>National Minutes Per Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_System_Entry_Back_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network System Entry Back Up</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_System_Entry__c</fullName>
        <label>Network System Entry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Network_System_Entry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_System__c</fullName>
        <label>Network System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Network_System</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Stations__c</fullName>
        <label>Number of Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ON_Filler__c</fullName>
        <label>ON Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Orders_Sent__c</fullName>
        <label>Original Orders Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Current_Month_End__c</fullName>
        <description>Paid Programming Only.  End Date of Current PP Month. Used in conjunction with workflows to update PP  REV # on Schedules. The workflow checks to make sure that the Schedule.Week is within the Program PP Current Month Start/End. A separate set of workflows runs if a previous month is being sold to alert planning to manually update the REV #.</description>
        <inlineHelpText>When a new month&apos;s initial PP Log is ready to be sent to a network, update this field and PP Current Start END with the first and last day of the new month PP Log to be sent.</inlineHelpText>
        <label>PP Current Month End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PP_Current_Month_Start__c</fullName>
        <description>Start Date of Current Month.  Used in conjunction with workflows to update REV # on Schedules.  The workflow checks to make sure that the Schedule.Week is within the Program PP Current Month Start/End.  A separate set of workflows runs if a previous month is being sold to alert planning to manually update the REV #.</description>
        <inlineHelpText>When a new month&apos;s initial PP Log is ready to be sent to a network, update this field and PP Current Month END with the first and last day of the new month PP Log to be sent.</inlineHelpText>
        <label>PP Current Month Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PP_Revision_1__c</fullName>
        <formula>PP_Revision__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PP Revision +1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Revision__c</fullName>
        <description>Jake PP Change Log Teset 10.26.2011</description>
        <label>PP Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PR_Filler__c</fullName>
        <label>PR Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LL3</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>N12</fullName>
                </value>
                <value>
                    <fullName>SS9</fullName>
                </value>
                <value>
                    <fullName>N11</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
                <value>
                    <fullName>P6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Log_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Log Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Log</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prelog_Canceled_Orders_with_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.
https://na8.salesforce.com/01QC0000000RYd8</description>
        <inlineHelpText>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.</inlineHelpText>
        <label>[DePrelog Canceled Orders with Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prelog_Check_Count__c</fullName>
        <formula>If(Prelog_Priority_Test_less_than_100__c = true, 0,1)+If(Prelog_Canceled_Orders_with_Clearance__c=true,0,1)+If(Prelog_ghosted_Orders_with_Clearance__c=true,0,1)+If(Prelog_Overbooked_Units__c =true,0,1)+If(Prelog_High_AUR_Low_Clearance__c =true,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Check Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelog_Date_Time__c</fullName>
        <description>Captures date and time when the prelog version field is changed.</description>
        <label>Prelog Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prelog_Entry_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prelog/Entry Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prelog_High_AUR_Low_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.
https://na8.salesforce.com/01QC0000000RYd8</description>
        <inlineHelpText>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.</inlineHelpText>
        <label>[Dep]Prelog High AUR &amp; Low Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prelog_Overbooked_Units__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.
https://na8.salesforce.com/01QC0000000RYd8</description>
        <inlineHelpText>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.</inlineHelpText>
        <label>[Dep]Prelog Overbooked Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prelog_Priority_Test_less_than_100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.
https://na8.salesforce.com/01QC0000000RYd8</description>
        <inlineHelpText>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.</inlineHelpText>
        <label>[Dep]Prelog Priority/Test less than 100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prelog_Version__c</fullName>
        <label>Prelog Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prelog</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prelog_ghosted_Orders_with_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.
https://na8.salesforce.com/01QC0000000RYd8</description>
        <inlineHelpText>Checklist for Prelogs.  Clears all checkboxes after a new version is uploaded.
Used by Operations to check for errors in prelogs and catch before air.</inlineHelpText>
        <label>[DepPrelog Ghosted Orders with Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Count__c</fullName>
        <description>Defined Field value of &quot;1&quot;. To Count number of Networks/Programs in a Data Set/SF Report</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defined Field value of &quot;1&quot;. To Count number of Networks/Programs in a Data Set/SF Report</inlineHelpText>
        <label>Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Number__c</fullName>
        <description>Unique number created per Intacct request</description>
        <displayFormat>PRGM-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Program Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RCreconciled_Week__c</fullName>
        <label>RCreconciled Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ratings_Reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ratings Checkbox to create Ratings records</description>
        <label>Ratings Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconciled_Week__c</fullName>
        <inlineHelpText>The last fully reconciled week in Salesforce</inlineHelpText>
        <label>Reconciled Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Entry</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday_Order_Deadline__c</fullName>
        <label>Saturday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Call_Letter__c</fullName>
        <label>Station Call Letter</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Order_Deadline__c</fullName>
        <label>Sunday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Filler__c</fullName>
        <label>Syndication Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <inlineHelpText>Blue, Red, Green, Orange</inlineHelpText>
        <label>Team</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <inlineHelpText>Determines the template for integration instructions

0 - Red Team Without Traffic
1 - Red Team With Traffic
2 - Red Team With Traffic, Without Rates
3 - Blue Team Without Traffic
4 - Blue Team With Traffic
5 - Blue Team With Traffic, Without Rates</inlineHelpText>
        <label>Template</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Order_Deadline__c</fullName>
        <label>Thursday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>CASE( 
MOD( Today() - DATE(1900, 1, 7), 7), 
0, &quot;Sun&quot;, 
1, &quot;Mon&quot;, 
2, &quot;Tues&quot;, 
3, &quot;Wed&quot;, 
4, &quot;Th&quot;, 
5, &quot;Fri&quot;, 
6, &quot;Sat&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday_Order_Deadline__c</fullName>
        <label>Tuesday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned by Finance</description>
        <inlineHelpText>Assigned by Finance</inlineHelpText>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Time_Stamp__c</fullName>
        <inlineHelpText>Captures Time Stamp of when Version was changed</inlineHelpText>
        <label>Version Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WC_Filler__c</fullName>
        <label>WC Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>